// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots Components/PureEntrepriseDashboard Loading 1`] = `
<div>
  <div
    class="desktop-blobs"
  >
    <div
      class="desktop-blob-2-3"
    >
      <h1
        class="mt-xs mb-m"
      >
        Mes Titres
      </h1>
    </div>
    <div
      class="desktop-blob-1-3"
    >
      <button
        class="btn btn-primary small flex"
      >
        <span
          class="mt-xxs"
        >
          Demander un titre…
        </span>
        <i
          class="icon-24 icon-plus flex-right"
        />
      </button>
    </div>
  </div>
  <div
    class="loaders fixed p"
  >
    <div
      class="loader"
    />
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`Automated Storybook Snapshots Components/PureEntrepriseDashboard Ok 1`] = `
<div>
  <div
    class="desktop-blobs"
  >
    <div
      class="desktop-blob-2-3"
    >
      <h1
        class="mt-xs mb-m"
      >
        Mes Titres
      </h1>
    </div>
    <div
      class="desktop-blob-1-3"
    >
      <button
        class="btn btn-primary small flex"
      >
        <span
          class="mt-xxs"
        >
          Demander un titre…
        </span>
        <i
          class="icon-24 icon-plus flex-right"
        />
      </button>
    </div>
  </div>
  <!--v-if-->
  <div
    class="width-full-p"
  >
    <div
      class="overflow-scroll-x mb"
    >
      <div
        class="table"
      >
        <div
          class="tr"
        >
          
          <div
            class="th nowrap min-width-8"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Nom 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap"
          >
            <button
              class="btn-menu full-x p-0"
            >
              – 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap min-width-8"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Type 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap nowrap min-width-5"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Statut 
              <svg
                aria-labelledby="chevron-bas"
                class="component-icon right"
                fill="#666"
                height="24px"
                role="application"
                tabindex="-1"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
                  version="1.1"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <symbol
                    id="icon-chevron-bas"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      chevron-bas
                    </title>
                    <path
                      d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
                    />
                  </symbol>
                  <symbol
                    id="icon-chevron-haut"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      chevron-haut
                    </title>
                    <path
                      d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
                    />
                  </symbol>
                  <symbol
                    id="icon-download"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      download
                    </title>
                    <path
                      d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
                    />
                  </symbol>
                </svg>
                <use
                  href="#icon-chevron-bas"
                />
              </svg>
            </button>
          </div>
          <div
            class="th nowrap min-width-5"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Activités 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap min-width-6"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Substances 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Carte 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap min-width-10"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Titulaires 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap min-width-8"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Régions 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap min-width-8"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Départements 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap min-width-8"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Références 
              <!--v-if-->
            </button>
          </div>
          
        </div>
        
        <router-link
          class="tr tr-link text-decoration-none"
          to="[object Object]"
        >
          
          <div
            class="td min-width-8"
          >
            <span
              class="bold"
            >
              Amadis 5
            </span>
          </div>
          <div
            class="td"
          >
            <span
              class="cap-first small bold mono"
            >
              <span
                class="bg-domaine-m color-bg pill py-xs px-s"
              >
                
                m
                
              </span>
            </span>
          </div>
          <div
            class="td min-width-8"
          >
            <span
              class="small bold cap-first"
            >
              autorisation d'exploitation
            </span>
          </div>
          <div
            class="td nowrap min-width-5"
          >
            <span
              class="cap-first small bold"
            >
              <span
                class="bg-success color-bg pill py-xs px-s"
              >
                
                valide
                
              </span>
            </span>
          </div>
          <div
            class="td min-width-5"
          >
            <div
              class="mb--s"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <div
            class="td min-width-6"
          >
            <ul
              class="list-inline mb--xs"
            >
              
              <li
                class="mr-xs mb-xs"
              >
                <span
                  class="bold cap-first small lh-2"
                >
                  <span
                    class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
                  >
                    
                    or
                    
                  </span>
                </span>
              </li>
              
            </ul>
          </div>
          <div
            class="td"
          >
            <!--v-if-->
          </div>
          <div
            class="td min-width-10"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                CHAMB'OR
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                Guyane
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                Guyane
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                DEAL : 01/2022
              </li>
              <li
                class="h6"
              >
                DEAL : X21-09
              </li>
              
            </ul>
          </div>
          
        </router-link>
        <router-link
          class="tr tr-link text-decoration-none"
          to="[object Object]"
        >
          
          <div
            class="td min-width-8"
          >
            <span
              class="bold"
            >
              Aachen
            </span>
          </div>
          <div
            class="td"
          >
            <span
              class="cap-first small bold mono"
            >
              <span
                class="bg-domaine-m color-bg pill py-xs px-s"
              >
                
                m
                
              </span>
            </span>
          </div>
          <div
            class="td min-width-8"
          >
            <span
              class="small bold cap-first"
            >
              autorisation de recherches
            </span>
          </div>
          <div
            class="td nowrap min-width-5"
          >
            <span
              class="cap-first small bold"
            >
              <span
                class="bg-neutral color-bg pill py-xs px-s"
              >
                
                échu
                
              </span>
            </span>
          </div>
          <div
            class="td min-width-5"
          >
            <div
              class="mb--s"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <div
            class="td min-width-6"
          >
            <ul
              class="list-inline mb--xs"
            >
              
              <li
                class="mr-xs mb-xs"
              >
                <span
                  class="bold cap-first small lh-2"
                >
                  <span
                    class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
                  >
                    
                    fer
                    
                  </span>
                </span>
              </li>
              
            </ul>
          </div>
          <div
            class="td"
          >
            <div
              class="p-xs"
            >
              <i
                class="icon-16 icon-globe"
              />
            </div>
          </div>
          <div
            class="td min-width-10"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                NINOR
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                Grand Est
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                Moselle
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                RNTM : 57TM0014
              </li>
              
            </ul>
          </div>
          
        </router-link>
        
      </div>
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`Automated Storybook Snapshots Components/PureEntrepriseDashboard Ok Without Activities 1`] = `
<div>
  <div
    class="desktop-blobs"
  >
    <div
      class="desktop-blob-2-3"
    >
      <h1
        class="mt-xs mb-m"
      >
        Mes Titres
      </h1>
    </div>
    <div
      class="desktop-blob-1-3"
    >
      <button
        class="btn btn-primary small flex"
      >
        <span
          class="mt-xxs"
        >
          Demander un titre…
        </span>
        <i
          class="icon-24 icon-plus flex-right"
        />
      </button>
    </div>
  </div>
  <!--v-if-->
  <div
    class="width-full-p"
  >
    <div
      class="overflow-scroll-x mb"
    >
      <div
        class="table"
      >
        <div
          class="tr"
        >
          
          <div
            class="th nowrap min-width-8"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Nom 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap"
          >
            <button
              class="btn-menu full-x p-0"
            >
              – 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap min-width-8"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Type 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap nowrap min-width-5"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Statut 
              <svg
                aria-labelledby="chevron-bas"
                class="component-icon right"
                fill="#666"
                height="24px"
                role="application"
                tabindex="-1"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
                  version="1.1"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                >
                  <symbol
                    id="icon-chevron-bas"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      chevron-bas
                    </title>
                    <path
                      d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
                    />
                  </symbol>
                  <symbol
                    id="icon-chevron-haut"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      chevron-haut
                    </title>
                    <path
                      d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
                    />
                  </symbol>
                  <symbol
                    id="icon-download"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      download
                    </title>
                    <path
                      d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
                    />
                  </symbol>
                </svg>
                <use
                  href="#icon-chevron-bas"
                />
              </svg>
            </button>
          </div>
          <div
            class="th nowrap min-width-6"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Substances 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Carte 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap min-width-10"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Titulaires 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap min-width-8"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Régions 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap min-width-8"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Départements 
              <!--v-if-->
            </button>
          </div>
          <div
            class="th nowrap min-width-8"
          >
            <button
              class="btn-menu full-x p-0"
            >
              Références 
              <!--v-if-->
            </button>
          </div>
          
        </div>
        
        <router-link
          class="tr tr-link text-decoration-none"
          to="[object Object]"
        >
          
          <div
            class="td min-width-8"
          >
            <span
              class="bold"
            >
              Amadis 5
            </span>
          </div>
          <div
            class="td"
          >
            <span
              class="cap-first small bold mono"
            >
              <span
                class="bg-domaine-m color-bg pill py-xs px-s"
              >
                
                m
                
              </span>
            </span>
          </div>
          <div
            class="td min-width-8"
          >
            <span
              class="small bold cap-first"
            >
              autorisation d'exploitation
            </span>
          </div>
          <div
            class="td nowrap min-width-5"
          >
            <span
              class="cap-first small bold"
            >
              <span
                class="bg-success color-bg pill py-xs px-s"
              >
                
                valide
                
              </span>
            </span>
          </div>
          <div
            class="td min-width-6"
          >
            <ul
              class="list-inline mb--xs"
            >
              
              <li
                class="mr-xs mb-xs"
              >
                <span
                  class="bold cap-first small lh-2"
                >
                  <span
                    class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
                  >
                    
                    or
                    
                  </span>
                </span>
              </li>
              
            </ul>
          </div>
          <div
            class="td"
          >
            <!--v-if-->
          </div>
          <div
            class="td min-width-10"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                CHAMB'OR
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                Guyane
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                Guyane
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                DEAL : 01/2022
              </li>
              <li
                class="h6"
              >
                DEAL : X21-09
              </li>
              
            </ul>
          </div>
          
        </router-link>
        <router-link
          class="tr tr-link text-decoration-none"
          to="[object Object]"
        >
          
          <div
            class="td min-width-8"
          >
            <span
              class="bold"
            >
              Aachen
            </span>
          </div>
          <div
            class="td"
          >
            <span
              class="cap-first small bold mono"
            >
              <span
                class="bg-domaine-m color-bg pill py-xs px-s"
              >
                
                m
                
              </span>
            </span>
          </div>
          <div
            class="td min-width-8"
          >
            <span
              class="small bold cap-first"
            >
              autorisation de recherches
            </span>
          </div>
          <div
            class="td nowrap min-width-5"
          >
            <span
              class="cap-first small bold"
            >
              <span
                class="bg-neutral color-bg pill py-xs px-s"
              >
                
                échu
                
              </span>
            </span>
          </div>
          <div
            class="td min-width-6"
          >
            <ul
              class="list-inline mb--xs"
            >
              
              <li
                class="mr-xs mb-xs"
              >
                <span
                  class="bold cap-first small lh-2"
                >
                  <span
                    class="bg-neutral py-xs px-s py-xxs px-xs rnd-xs color-bg box"
                  >
                    
                    fer
                    
                  </span>
                </span>
              </li>
              
            </ul>
          </div>
          <div
            class="td"
          >
            <div
              class="p-xs"
            >
              <i
                class="icon-16 icon-globe"
              />
            </div>
          </div>
          <div
            class="td min-width-10"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                NINOR
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                Grand Est
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                Moselle
              </li>
              
            </ul>
          </div>
          <div
            class="td min-width-8"
          >
            <ul
              class="list-prefix mb--xs"
            >
              
              <li
                class="h6"
              >
                RNTM : 57TM0014
              </li>
              
            </ul>
          </div>
          
        </router-link>
        
      </div>
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`Automated Storybook Snapshots Components/PureEntrepriseDashboard With Error 1`] = `
<div>
  <div
    class="desktop-blobs"
  >
    <div
      class="desktop-blob-2-3"
    >
      <h1
        class="mt-xs mb-m"
      >
        Mes Titres
      </h1>
    </div>
    <div
      class="desktop-blob-1-3"
    >
      <button
        class="btn btn-primary small flex"
      >
        <span
          class="mt-xxs"
        >
          Demander un titre…
        </span>
        <i
          class="icon-24 icon-plus flex-right"
        />
      </button>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <div
    class="mb p-s color-bg bg-error"
  >
    Le serveur est inaccessible, veuillez réessayer plus tard
  </div>
</div>
`;
